test(bdd): implement petition acceptance flows and clean up quality issues
Co-authored-by: factory-droid[bot] <138933559+factory-droid[bot]@users.noreply.github.com>